ping-pong/manifests/local/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: exercises
  labels:
    app: postgres
spec:
  clusterIP: None
  selector:
    app: postgresapp
  ports:
    - port: 5432
      name: db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-stset
  namespace: exercises
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgresapp
  template:
    metadata:
      labels:
        app: postgresapp
    spec:
      volumes:
        - name: postgres-initdb
          configMap:
            name: postgres-configmap
      containers:
        - name: postgres
          image: postgres:18.0
          volumeMounts:
            - name: postgres-data-storage
              mountPath: /var/lib/postgresql
            - name: postgres-initdb
              mountPath: /docker-entrypoint-initdb.d
  volumeClaimTemplates:
    - metadata:
        name: postgres-data-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
